--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -6,6 +6,14 @@
     }
   }
 }
+#returned-ticket-list-toggler {
+  display: none;
+  &:checked ~ .profile {
+    &-returned-list {
+      transform: scale(1);
+    }
+  }
+}
 
 .profile {
   &__upload-img {
@@ -141,13 +149,6 @@
     }
   }
   &-ticket-list {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transition-duration: 0.3s;
-    transform: scale(0);
     &__container {
       position: relative;
       display: flex;
@@ -156,10 +157,9 @@
       justify-content: center;
     }
     &__table-container {
-      overflow-y: scroll;
+      overflow-y: auto;
       width: 100%;
       max-height: 575px;
-      border: 1px solid var(--palette-primary-main);
       &::-webkit-scrollbar {
         width: 5px;
         border-radius: 100px;
@@ -236,6 +236,17 @@
         background-color: var(--palette-primary-main);
       }
     }
+  }
+  &-ticket-list,
+  &-returned-list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition-duration: 0.3s;
+    transform: scale(0);
+    background-color: var(--palette-primary-light);
   }
   &-center {
     display: flex;
