--- a/src/html/includes/login.html
+++ b/src/html/includes/login.html
@@ -22,6 +22,8 @@
           placeholder="Username"
           id="username"
           autocomplete="off"
+          maxlength="20"
+          required
         />
       </label>
       <label class="login__field input-field" for="password">
@@ -44,6 +46,7 @@
           type="password"
           placeholder="Password"
           id="password"
+          required
         />
       </label>
       <div class="login__body-bottom">
