feat: add minimal validation

--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -172,6 +172,7 @@
               id="username"
               placeholder="Name"
               type="text"
+              maxlength="20"
               required
             />
           </label>
