feat: add validation

--- a/src/html/includes/register.html
+++ b/src/html/includes/register.html
@@ -23,6 +23,7 @@
           id="username"
           autocomplete="off"
           maxlength="20"
+          pattern="[a-zA-Z0-9]{5,20}"
           required
         />
       </label>
