--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -22,6 +22,7 @@
             id="user-name"
             placeholder="Name"
             type="text"
+            pattern="[a-zA-Z0-9]{5,20}"
             maxlength="20"
           />
         </label>
