feat: some fixes

--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -78,7 +78,7 @@
           <span class="tickets-form__subtitle">Tour to Louvre</span>
           <div class="tickets-form__term">
             <div class="tickets-form__field">
-              <div class="tickets-form__field-toggler">
+              <div class="tickets-form__field-toggler droplist-toggler">
                 <svg
                   class="tickets-field__icon"
                   fill="none"
@@ -118,7 +118,7 @@
               </ul>
             </div>
             <div class="tickets-form__field">
-              <div class="tickets-form__field-toggler" for="select-time">
+              <div class="tickets-form__field-toggler droplist-toggler" for="select-time">
                 <svg
                   fill="none"
                   height="15"
@@ -223,7 +223,7 @@
             />
           </label>
           <div class="tickets-form__field">
-            <div class="tickets-form__field-toggler" for="select-ticket-type">
+            <div class="tickets-form__field-toggler droplist-toggler" for="select-ticket-type">
               <svg
                 fill="none"
                 height="15"
